Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3038

OST nid is being messed up in the config log 2.4

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0, Lustre 2.1.5
    • 3
    • 7410

      We found this problem during hyperion DNE test. And I can manage to reproduce it locally. with separate MGS/MDS and 2 OSSes(one OST per OSS).

      1. MOUNT mgs, then MDT, then OST, the config log seems fine.

      [root@mds tests]# ../utils/llog_reader /mnt/mgs/CONFIGS/lustre-MDT0000 
      Header size : 8192
      Time : Mon Mar 25 23:32:55 2013
      Number of records: 21
      Target uuid : config_uuid 
      -----------------------
      #01 (224)marker   2 (flags=0x01, v2.3.63.0) lustre-MDT0000-mdtlov 'lov setup' Mon Mar 25 23:32:55 2013-
      #02 (136)attach    0:lustre-MDT0000-mdtlov  1:lov  2:lustre-MDT0000-mdtlov_UUID  
      #03 (176)lov_setup 0:lustre-MDT0000-mdtlov  1:(struct lov_desc)
      		uuid=lustre-MDT0000-mdtlov_UUID  stripe:cnt=1 size=1048576 offset=18446744073709551615 pattern=0x1
      #04 (224)marker   2 (flags=0x02, v2.3.63.0) lustre-MDT0000-mdtlov 'lov setup' Mon Mar 25 23:32:55 2013-
      #05 (224)marker   3 (flags=0x01, v2.3.63.0) lustre-MDT0000  'add mdt' Mon Mar 25 23:32:55 2013-
      #06 (120)attach    0:lustre-MDT0000  1:mdt  2:lustre-MDT0000_UUID  
      #07 (112)mount_option 0:  1:lustre-MDT0000  2:lustre-MDT0000-mdtlov  
      #08 (160)setup     0:lustre-MDT0000  1:lustre-MDT0000_UUID  2:0  3:lustre-MDT0000-mdtlov  4:f  
      #09 (224)marker   3 (flags=0x02, v2.3.63.0) lustre-MDT0000  'add mdt' Mon Mar 25 23:32:55 2013-
      #10 (224)marker   9 (flags=0x01, v2.3.63.0) lustre-OST0000  'add osc' Mon Mar 25 23:33:44 2013-
      #11 (088)add_uuid  nid=172.16.151.130@tcp(0x20000ac109782)  0:  1:172.16.151.130@tcp  
      #12 (144)attach    0:lustre-OST0000-osc-MDT0000  1:osc  2:lustre-MDT0000-mdtlov_UUID  
      #13 (152)setup     0:lustre-OST0000-osc-MDT0000  1:lustre-OST0000_UUID  2:172.16.151.130@tcp  
      #14 (136)lov_modify_tgts add 0:lustre-MDT0000-mdtlov  1:lustre-OST0000_UUID  2:0  3:1  
      #15 (224)marker   9 (flags=0x02, v2.3.63.0) lustre-OST0000  'add osc' Mon Mar 25 23:33:44 2013-
      #16 (224)marker  12 (flags=0x01, v2.3.63.0) lustre-OST0002  'add osc' Mon Mar 25 23:34:00 2013-
      #17 (088)add_uuid  nid=172.16.151.131@tcp(0x20000ac109783)  0:  1:172.16.151.131@tcp  
      #18 (144)attach    0:lustre-OST0002-osc-MDT0000  1:osc  2:lustre-MDT0000-mdtlov_UUID  
      #19 (152)setup     0:lustre-OST0002-osc-MDT0000  1:lustre-OST0002_UUID  2:172.16.151.131@tcp  
      #20 (136)lov_modify_tgts add 0:lustre-MDT0000-mdtlov  1:lustre-OST0002_UUID  2:2  3:1  
      #21 (224)marker  12 (flags=0x02, v2.3.63.0) lustre-OST0002  'add osc' Mon Mar 25 23:34:00 2013-
      

      But if we mount mgs, then OSTs, then MDT, the ost NID seems being messed up, i.e. both OSTs is being to the same NID.

      [root@mds tests]# ../utils/llog_reader /mnt/mgs/CONFIGS/lustre-MDT0000 
      Header size : 8192
      Time : Mon Mar 25 22:50:27 2013
      Number of records: 27
      Target uuid : config_uuid 
      -----------------------
      #01 (224)marker   8 (flags=0x01, v2.3.63.0) lustre-MDT0000-mdtlov 'lov setup' Mon Mar 25 22:50:27 2013-
      #02 (136)attach    0:lustre-MDT0000-mdtlov  1:lov  2:lustre-MDT0000-mdtlov_UUID  
      #03 (176)lov_setup 0:lustre-MDT0000-mdtlov  1:(struct lov_desc)
      		uuid=lustre-MDT0000-mdtlov_UUID  stripe:cnt=1 size=1048576 offset=18446744073709551615 pattern=0x1
      #04 (224)marker   8 (flags=0x02, v2.3.63.0) lustre-MDT0000-mdtlov 'lov setup' Mon Mar 25 22:50:27 2013-
      #05 (224)marker   9 (flags=0x01, v2.3.63.0) lustre-MDT0000  'add mdt' Mon Mar 25 22:50:27 2013-
      #06 (120)attach    0:lustre-MDT0000  1:mdt  2:lustre-MDT0000_UUID  
      #07 (112)mount_option 0:  1:lustre-MDT0000  2:lustre-MDT0000-mdtlov  
      #08 (160)setup     0:lustre-MDT0000  1:lustre-MDT0000_UUID  2:0  3:lustre-MDT0000-mdtlov  4:f  
      #09 (224)marker   9 (flags=0x02, v2.3.63.0) lustre-MDT0000  'add mdt' Mon Mar 25 22:50:27 2013-
      #10 (224)marker  10 (flags=0x01, v2.3.63.0) lustre-MDT0000  'add osc(copied)' Mon Mar 25 22:50:27 2013-
      #11 (224)marker  11 (flags=0x01, v2.3.63.0) lustre-OST0001  'add osc' Mon Mar 25 22:50:27 2013-
      #12 (088)add_uuid  nid=172.16.151.130@tcp(0x20000ac109782)  0:  1:172.16.151.130@tcp  
      #13 (144)attach    0:lustre-OST0001-osc-MDT0000  1:osc  2:lustre-MDT0000-mdtlov_UUID  
      #14 (152)setup     0:lustre-OST0001-osc-MDT0000  1:lustre-OST0001_UUID  2:172.16.151.130@tcp  
      #15 (136)lov_modify_tgts add 0:lustre-MDT0000-mdtlov  1:lustre-OST0001_UUID  2:1  3:1  
      #16 (224)marker  11 (flags=0x02, v2.3.63.0) lustre-OST0001  'add osc' Mon Mar 25 22:50:27 2013-
      #17 (224)marker  11 (flags=0x02, v2.3.63.0) lustre-MDT0000  'add osc(copied)' Mon Mar 25 22:50:27 2013-
      #18 (224)marker  12 (flags=0x01, v2.3.63.0) lustre-MDT0000  'add osc(copied)' Mon Mar 25 22:50:27 2013-
      #19 (224)marker  13 (flags=0x01, v2.3.63.0) lustre-OST0002  'add osc' Mon Mar 25 22:50:27 2013-
      #20 (088)add_uuid  nid=172.16.151.130@tcp(0x20000ac109782)  0:  1:172.16.151.130@tcp  
      #21 (144)attach    0:lustre-OST0002-osc-MDT0000  1:osc  2:lustre-MDT0000-mdtlov_UUID  
      #22 (152)setup     0:lustre-OST0002-osc-MDT0000  1:lustre-OST0002_UUID  2:172.16.151.130@tcp  
      #23 (088)add_uuid  nid=172.16.151.131@tcp(0x20000ac109783)  0:  1:172.16.151.131@tcp  
      #24 (120)add_conn  0:lustre-OST0002-osc-MDT0000  1:172.16.151.131@tcp  
      #25 (136)lov_modify_tgts add 0:lustre-MDT0000-mdtlov  1:lustre-OST0002_UUID  2:2  3:1  
      #26 (224)marker  13 (flags=0x02, v2.3.63.0) lustre-OST0002  'add osc' Mon Mar 25 22:50:27 2013-
      #27 (224)marker  13 (flags=0x02, v2.3.63.0) lustre-MDT0000  'add osc(copied)' Mon Mar 25 22:50:27 2013-
      
      

            di.wang Di Wang (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: